Fix Safari macOS/iOS high speed audio/video algorithm https://bugs.webkit.org/show_bug.cgi?id=191053 rdar://103940613

Reviewed by Eric Carlson.

The default values for `PitchCorrectionAlgorithm` in `UnifiedWebPreferences.yaml` are not being
propogated across the process boundary to the GPU process. Additionally, MediaPlayerPrivateMediaSourceAVFObjC
is ignoring the setting entirely and just doing its own thing.

Move the existing utility function `audioTimePitchAlgorithmForMediaPlayerPitchCorrectionAlgorithm()` from
MediaPlayerPrivateAVFoundationObjC.mm into MediaSessionManagerCocoa.mm. Then use that utility method in
`MediaPlayerPrivateMediaSourceAVFObjC` instead of hard-coding "Spectral" vs. "Varispeed".

`MediaPlayerPrivateRemote` will only explicitly send a message to `RemoteMediaPlayerProxy` when
`setPitchCorrectionAlgorithm()` is called, which means in the general case that the GPU process never
receives the correct pitch correction algorithm setting. Include `PitchCorrectionAlgorithm` in the
list of values passed to `RemoteMediaPlayerProxy` in `prepareForPlayback()`.

Canonical link: https://commits.webkit.org/264402@main